project('CyberPong', 'cpp', version : 'Development')
SDL_dep = dependency('SDL2')

executable('CyberPong', 
          'main.cpp',
          'App.cpp',
          'Background.cpp',
          'Initialization.cpp',
          'Menu.cpp',
          'RGBA.cpp',
          'Window.cpp',
          cpp_args : '-Wall',
          dependencies : [SDL_dep],
          )